--- a/28/Athlete.html
+++ b/28/Athlete.html
@@ -6,18 +6,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="content">
-        <nav>
-            <ul>
-                <li><a href="home.html">ホーム</a></li>
-                <li><a href="hometown.html">出身地</a></li>
-                <li><a href="hobby.html">趣味</a></li>
-                <li><a href="sport.html">好きなスポーツ</a></li>
-                <li><a href="anime.html">好きなアニメ</a></li>
-                <li><a href="game.html">好きなゲーム</a></li>
-            </ul>
-        </nav> 
-    </div>
+    <nav id="content_nav">
+        <ul>
+            <li><a href="home.html">ホーム</a></li>
+            <li><a href="hometown.html">プロフィール</a></li>
+            <li><a href="hobby.html">趣味</a></li>
+            <li><a href="sport.html">好きなスポーツ</a></li>
+            <li><a href="anime.html">好きなアニメ</a></li>
+            <li><a href="game.html">好きなゲーム</a></li>
+        </ul>
+    </nav>
     <div class="Daizen">
         <h1>前田大然選手</h1>
         <h2>生い立ち</h2>
