--- a/28/Barcelona.html
+++ b/28/Barcelona.html
@@ -6,18 +6,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="content">
-        <nav>
-            <ul>
-                <li><a href="home.html">ホーム</a></li>
-                <li><a href="hometown.html">出身地</a></li>
-                <li><a href="hobby.html">趣味</a></li>
-                <li><a href="sport.html">好きなスポーツ</a></li>
-                <li><a href="anime.html">好きなアニメ</a></li>
-                <li><a href="game.html">好きなゲーム</a></li>
-            </ul>
-        </nav> 
-    </div>
+    <nav id="content_nav">
+        <ul>
+            <li><a href="home.html">ホーム</a></li>
+            <li><a href="hometown.html">プロフィール</a></li>
+            <li><a href="hobby.html">趣味</a></li>
+            <li><a href="sport.html">好きなスポーツ</a></li>
+            <li><a href="anime.html">好きなアニメ</a></li>
+            <li><a href="game.html">好きなゲーム</a></li>
+        </ul>
+    </nav> 
     <div class="Barcelona">
         <h1>バルセロナ</h1>
         <p>
@@ -29,50 +27,20 @@
         </p>
     </div>
     <div class="position">
-        <div class="LEWANDOWSKI">
-            <h3>ロベルト•レバンドフスキ</h3>
-            <p>背番号　9番　ポジション　CF</p>
-        </div>
-        <div class="YAMAL">
-            <h3>ラミネ•ジャマル</h3>
-            <p>背番号　19番　ポジション　RWG</p>
-        </div>
-        <div class="RAPHINHA">
-            <h3>ラフィーニャ</h3>
-            <p>背番号　11番　ポジション　LWG</p>
-        </div>
-        <div class="FERMIN">
-            <h3>フェルミン•ロペス</h3>
-            <p>背番号　16番　ポジション　OMF</p>
-        </div>
-        <div class="PEDRI">
-            <h3>ペドリ</h3>
-            <p>背番号　8番　ポジション　CMF</p>
-        </div>
-        <div class="GAVI">
-            <h3>ガビ</h3>
-            <p>背番号　6番　ポジション　CMF</p>
-        </div>
-        <div class="GARCIA">
-            <h3>エリック•ガルシア</h3>
-            <p>背番号　24番　ポジション　RSB</p>
-        </div>
-        <div class="CUBARSI">
-            <h3>パウ•クバルシ</h3>
-            <p>背番号　2番　ポジション　CB</p>
-        </div>
-        <div class="MARTINEZ">
-            <h3>イネゴ•マルティネス</h3>
-            <p>背番号　5番　ポジション　CB</p>
-        </div>
-        <div class="BALDE">
-            <h3>アレハンドロ•バルデ</h3>
-            <p>背番号　3番　ポジション　LSB</p>
-        </div>
-        <div class="SZCZESNY">
-            <h3>ヴォイチェフ•シュチェンスニー</h3>
-            <p>背番号　25番　ポジション　GK</p>
-        </div>
+        <table>
+            <tr>
+                <th>GK</th><th>RSB</th><th>LSB</th><th>CB</th><th>CB</th>
+            </tr>
+            <tr>
+                <td>ペーニャ</td><td>ガルシア</td><td>バルデ</td><td>マルティネス</td><td>クバルシ</td>
+            </tr>
+            <tr>
+                <th>CMF</th><th>CMF</th><th>OMF</th><th>RWG</th><th>LWG</th><th>CF</th>
+            </tr>
+            <tr>
+                <td>ガビ</td><td>ペドリ</td><td>ロペス</td><td>ヤマル</td><td>ラフィーニャ</td><td>レバンドフスキ</td>
+            </tr>
+        </table>
     </div>
 </body>
 </html>
