--- a/28/home.html
+++ b/28/home.html
@@ -2,27 +2,37 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style.css">
     <title>自己紹介</title>
 </head>
 <body>
-    <div class="content">
-        <nav>
-            <ul>
-                <li><a href="home.html">ホーム</a></li>
-                <li><a href="hometown.html">出身地</a></li>
-                <li><a href="hobby.html">趣味</a></li>
-                <li><a href="sport.html">好きなスポーツ</a></li>
-                <li><a href="anime.html">好きなアニメ</a></li>
-                <li><a href="game.html">好きなゲーム</a></li>
-            </ul>
-        </nav> 
+    <nav id="content_nav">
+        <ul>
+            <li><a href="home.html">ホーム</a></li>
+            <li><a href="hometown.html">プロフィール</a></li>
+            <li><a href="hobby.html">趣味</a></li>
+            <li><a href="sport.html">好きなスポーツ</a></li>
+            <li><a href="anime.html">好きなアニメ</a></li>
+            <li><a href="game.html">好きなゲーム</a></li>
+        </ul>
+    </nav>
     </div>
-    <div class="profile">
-        <h1>プロフィール</h1>
+    <div class="information">
+        <h1>簡単な自己紹介</h1>
         <p>吉松　輝</p>
+        <img src="image/saitou.jpg" alt="斎藤">
         <p>福岡県</p>
-        <p>東海大学付属福岡高等学校</p>
+        <p>麻生情報ビジネス専門学校</p>
+    </div>
+    <div class="list">
+        <ul>
+            <li><a href="home.html">ホーム</a></li>
+            <li><a href="hometown.html">プロフィール</a></li>
+            <li><a href="hobby.html">趣味</a></li>
+            <li><a href="sport.html">好きなスポーツ</a></li>
+            <li><a href="anime.html">好きなアニメ</a></li>
+            <li><a href="game.html">好きなゲーム</a></li>
+        </ul>
     </div>
 </body>
 </html>
