--- a/28/sport.html
+++ b/28/sport.html
@@ -6,18 +6,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="content">
-        <nav>
-            <ul>
-                <li><a href="home.html">ホーム</a></li>
-                <li><a href="hometown.html">出身地</a></li>
-                <li><a href="hobby.html">趣味</a></li>
-                <li><a href="sport.html">好きなスポーツ</a></li>
-                <li><a href="anime.html">好きなアニメ</a></li>
-                <li><a href="game.html">好きなゲーム</a></li>
-            </ul>
-        </nav> 
-    </div>
+    <nav id="content_nav">
+        <ul>
+            <li><a href="home.html">ホーム</a></li>
+            <li><a href="hometown.html">プロフィール</a></li>
+            <li><a href="hobby.html">趣味</a></li>
+            <li><a href="sport.html">好きなスポーツ</a></li>
+            <li><a href="anime.html">好きなアニメ</a></li>
+            <li><a href="game.html">好きなゲーム</a></li>
+        </ul>
+    </nav>
     <div class="sport">
         <h2>好きなスポーツ</h2>
         <p>サッカー</p>
@@ -27,7 +25,7 @@
         <a href="Barcelona.html">バルセロナ</a>
         <h2>好きな選手</h2>
         <p>前田大然選手</p>
-        <img src="image/Athlete.jpg" alt="前田大然選手" width="24%" height="35%"><br>
+        <img src="image/Athlete.jpg" alt="前田大然選手" width="24%" height="38%"><br>
         <a href="Athlete.html">前田大然選手</a>
     </div>
 </body>
