--- a/28/Barcelona.html
+++ b/28/Barcelona.html
@@ -17,7 +17,8 @@
         </ul>
     </nav> 
     <div class="Barcelona">
-        <h1>バルセロナ</h1>
+        <h1>Barcelona</h1>
+        <img src="image/balsa.jpg" alt="バルセロナ" width="50%" height="50%">
         <p>
             スペイン•カタルーニャ州バルセロナ<br>
             に本拠地を置くサッカークラブ。<br>
