--- a/28/home.html
+++ b/28/home.html
@@ -23,6 +23,7 @@
         <img src="image/saitou.jpg" alt="斎藤">
         <p>福岡県</p>
         <p>麻生情報ビジネス専門学校</p>
+        <p>情報システム専攻科</p>
     </div>
     <div class="list">
         <ul>
